test/regress/regress-12.txt
;;; ERROR: 1
(module
  (func)
)

(func))
(;; STDERR ;;;
out/test/regress/regress-12.txt:6:1: error: unexpected token (, expected EOF.
(func))
^
;;; STDERR ;;)
